Fix horizontal scrolling at login and register page

--- a/client/src/styles/css/main.css
+++ b/client/src/styles/css/main.css
@@ -20,7 +20,7 @@
 }
 
 .auth {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
 }
