--- a/client/src/styles/scss/_auth.scss
+++ b/client/src/styles/scss/_auth.scss
@@ -1,5 +1,5 @@
 .auth {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
 
